--- a/index.html
+++ b/index.html
@@ -7,7 +7,11 @@
 <body>
 
 <main>
-	<h2 class="green-text">"Time Traveling Kitty wuvs you"  <3  <3 </h2><br />
+	
+		<h2 class="Blue-text">
+			<marquee scrollamount="22">"Time Traveling Kitty really wuvs you"  <3  <3 </marquee>
+		</h2><br />
+
 
 
 </main>
