--- a/index.html
+++ b/index.html
@@ -8,16 +8,15 @@
 
 <main>
 	
-		<h2 class="Blue-text">
-			<marquee scrollamount="22">"Time Traveling Kitty really wuvs you"  <3  <3 </marquee>
-		</h2><br />
-
-
+	
+	<div class="back"></div>
+	<div class="heart"></div>
+	<h2 class="Blue-text">
+		<marquee scrollamount="36">"Time Traveling Kitty really wuvs you"  <3  <3 </marquee>
+	</h2><br />
 
 </main>
 
-<div>
-</div>
 
 	<p2>
 		<img class="resize" src="https://bit.ly/fcc-relaxing-cat" alt="A cute orange cat lying on its back." >
