borrowing some more code. to make it look purrty

--- a/index.html
+++ b/index.html
@@ -8,12 +8,15 @@
 
 <main>
 	
-	
+	<div class="back2"></div>
 	<div class="back"></div>
 	<div class="heart"></div>
 	<h2 class="Blue-text">
-		<marquee scrollamount="36">"Time Traveling Kitty really wuvs you"  <3  <3 </marquee>
+		<marquee scrollamount="28">"Time Traveling Kitty really wuvs you"  <3  <3 </marquee>
 	</h2><br />
+
+	<div class="star-1 stars"></div>
+	<div class="star-2 stars"></div>
 
 </main>
 
